examples/test/testpolicy6420.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6420
  namespace: namespace431
spec:
  podSelector:
    matchLabels:
      key19: value22
      key15: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value22
      podSelector:
        matchLabels:
          key6: value22
          key10: value33
          key21: value42
